fix: added overflow -y: auto; to the modal in order to ensure that it scrolls when viewed on a mobile device.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,6 +204,11 @@ p {
 }
 
 /*----------------------------------Modals */
+.modal {
+    max-height: calc(100vh - 80px);
+    overflow-y: auto;  
+}
+
 .modal-title {
     width: 100%;
     font-family: 'ringbearermedium', Fallback, sans-serif;
